--- a/index.html
+++ b/index.html
@@ -3,21 +3,24 @@
 <head>
 	<title></title>
 	<script src="home.js"></script>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+<div>
 	<form action="">
  
-<p><label for="decimal">Décimal&#160;: </label> <input type="text" id="decimal" name="decimal" >
-<input type="button" name="submit1" value="&#8674;" onClick="xdecimal();"></p>
- 
-<p><label for="hexadecimal">Hexadécimal&#160;: </label> <input type="text" id="hexadecimal" name="hexadecimal">
-<input type="button" name="submit2" value="&#8674;" onClick="xhexadecimal();"></p>
- 
-<p><label for="binaire">Binaire&#160;: </label> <input type="text" id="binaire" name="binaire">
-<input type="button" name="submit3" value="&#8674;" onClick="xbinaire();"></p>
- 
- <p><label for="octal">Octal&#160;: </label> <input type="text" id="octal" name="octal">
-<input type="button" name="submit4" value="&#8674;" onClick="Octal();"></p>
-</form>
+		<p><label for="decimal">Décimal&#160;: </label> <input type="text" id="decimal" name="decimal" >
+		<input type="button" name="submit1" value="converter" onClick="xdecimal();"></p>
+		 
+		<p><label for="hexadecimal">Hexadécimal&#160;: </label> <input type="text" id="hexadecimal" name="hexadecimal">
+		<input type="button" name="submit2" value="converter" onClick="xhexadecimal();"></p>
+		 
+		<p><label for="binaire">Binaire&#160;: </label> <input type="text" id="binaire" name="binaire">
+		<input type="button" name="submit3" value="converter" onClick="xbinaire();"></p>
+		 
+		 <p><label for="octal">Octal&#160;: </label> <input type="text" id="octal" name="octal">
+		<input type="button" name="submit4" value="converter" onClick="Octal();"></p>
+	</form>
+</div>
 </body>
 </html>
